nullaway_error_1099AA61-9AEA-419B-A572-DB010C01C9B7.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/ast/ConstructorReference.java:237: error: [NullAway] enhanced-for expression this.dimensions is @Nullable
				for (SpelNodeImpl dimension : this.dimensions) {
				                                  ^
    (see http://t.uber.com/nullaway )
